--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,15 @@ dependencies:
     sdk: flutter
   video_player:
   carousel_slider: ^2.3.1
+  modal_progress_hud: ^0.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  cloud_firestore: ^0.13.0+1
+  firebase_auth: ^0.15.3+1
+  firebase_core: ^0.4.3+2
 
 dev_dependencies:
   flutter_test:
