--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   video_player:
   carousel_slider: ^2.3.1
   modal_progress_hud: ^0.1.3
+  rflutter_alert: ^1.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
