--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   carousel_slider: ^2.3.1
   modal_progress_hud: ^0.1.3
   rflutter_alert: ^1.0.3
-
+  cached_network_image: 2.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
